Implement parameters processing. Improve validation and add for parameters.